--- a/scss/_maps.scss
+++ b/scss/_maps.scss
@@ -1,6 +1,6 @@
 $color_fondo: (index: black, sandwichs: rgb(28, 25, 25), quienes: rgb(37, 32, 32), horarios: rgb(26, 25, 25), contacto: rgb(48, 40, 40));
-$color_letras: (color1: black, color2: white, color3: red, color4: grey);
-$medidas: (ancho1: 540px, ancho2: 440px, ancho3: 400px );
+$color_letras: (color1: black, color2: white, color3: rgb(230, 8, 8), color4: grey);
+$medidas: (ancho1: 540px, ancho2: 440px, ancho3: 350px );
 
 @each $clave, $valor in $color_fondo {
     .btn-#{$clave} {
