--- a/scss/_tipografia.scss
+++ b/scss/_tipografia.scss
@@ -1,10 +1,13 @@
 .font {
     font-size: large;
-    font-weight: bold;
     color: white;
     font-style: italic;
 }
 
 .titulo {
     text-decoration: overline;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-top: 5px;
 }
+
