--- a/scss/_tipografia.scss
+++ b/scss/_tipografia.scss
@@ -2,6 +2,7 @@
     font-size: large;
     color: white;
     font-style: italic;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .titulo {
